<!--
  ~ Copyright (c) 2016 Martin Norbert
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.site_monitor.activity.SiteSettingsActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_rename"
        android:orderInCategory="100"
        android:title="@string/action_rename"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_remove"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_internal_ip"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/action_add_internal_ip"
        app:showAsAction="never"/>


</menu>
