<!--
  ~ Copyright (c) 2016 Martin Norbert
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/size_medium"
              tools:context=".activity.SiteSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="URL "
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/faviconImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="18dp"
            android:maxWidth="18dp"
            android:minHeight="18dp"
            android:minWidth="18dp"
            />

        <TextView
            android:id="@+id/hostTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_tiny"
            android:autoLink="web"
            android:text="_host"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/internalIpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Internal IP "
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/internalIpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_tiny"
            android:autoLink="web"
            android:text="_internalIp"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notifications"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trustCertificateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trust_certificate"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/trustCertificateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_small"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_calls"
            android:textSize="18sp"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/size_tiny"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:indeterminateOnly="true"
            android:maxHeight="18dp"
            android:maxWidth="18dp"
            android:minHeight="18dp"
            android:minWidth="18dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/callListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_small"
        android:divider="@null"
        tools:listitem="@layout/cell_site_call"/>

</LinearLayout>
